Fixed responsive align & background blur & gradient

--- a/Javascript & Ajax/Football API/style.css
+++ b/Javascript & Ajax/Football API/style.css
@@ -3,17 +3,38 @@
 }
 
 
-body {
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('../Football API/Assets/bg.jpg');
-    background-size: auto 120vh;
+    background-size: auto 125vh;
+    scale: 1.15;
     background-position: top;
     background-repeat: no-repeat;
+    filter: blur(2px);
+    z-index: -1;
+}
+
+body {
     font-family: 'Manrope', sans-serif;
+    color: white;
     overflow: hidden;
 }
 
-
-
+.gradient {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.650) 0%, rgba(255,255,255,0) 50%, rgba(0,0,0,0.650) 100%);
+    z-index: -1;
+}
 
 main {
     position: absolute;
@@ -39,11 +60,18 @@ main {
     }
     section {
         align-self: start;
+        position: relative;
     }
     .teamOne, .teamTwo {
         scale: 0.75;
     }
-
+    .buttonContainer {
+        flex-direction: column;
+        padding-left: 30%;
+        padding-right: 30%;
+        padding-top: 10%;
+        gap: 20px;
+    }
 }
 
 
@@ -105,10 +133,16 @@ nav {
 
 section {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+    grid-template-rows: 0.2fr 1fr;
+    gap: 20px;
     align-items: center;
     justify-items: center;
+}
+
+section > h1 {
+    word-break: keep-all;
+    align-self: flex-end;
 }
 
 .teamOne, .teamTwo {
